@@ -25,6 +25,10 @@ xcmsSets now include "i" and "sn" columns in the peaks matrix
 
 Updated Windows NetCDF library to version 3.6.2 (now statically linked into xcms.dll)
 
+Small fixes to xcmsSet generation relating to finding/categorizing files:
+  - If the files argument is not set, then "./" is no longer appended
+  - One character directory names, and thus group names, are now supported
+
 2006-04-27: 1.6.1 & 1.7.0
 
 Bioconductor release 1.9 and development branch 2.0
